src/yini_test/cases/golden/lenient/valid/numbers/digit-separator-in-float.yini
@yini

^ Numbers
val = 3_141.592_653

