src/yini_test/cases/golden/lenient/invalid/numbers/malformed-underscore-leading.yini
@yini

^ Numbers
val = _123

